# ivs2-profiler

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Install.cmake  Package.cmake
src/: profiler.cpp
tst/: data10.txt  data1k.txt  dataBad.txt
